--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.11.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.17",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
