--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.17.5",
     "@tabler/icons-react": "^3.11.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-player": "^2.16.0",
+    "tailwind-merge": "^2.4.0",
+    "three": "^0.167.1",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "postcss": "^8",
