--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
     "@tabler/icons-react": "^3.11.0",
+    "antd": "^5.21.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
